# sphinx-39-bug

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
demp_project/: __init__.py
doc/source/: conf.py  index.rst
