[tool.poetry]
name = "demp_project"
version = "0.1.0"
description = ""
authors = ["Sebastian Wallkötter <sebastian@wallkoetter.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
